yaml/book.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
  namespace: user11
  labels:
    app: books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - name: books
          image: 879772956301.dkr.ecr.ap-southeast-1.amazonaws.com/user11-book:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: books
  namespace: skcc04-ns
  labels:
    app: books
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: books
